fix: :bug: fix update status & name , and pagination
